log/build_2024-08-25_17-42-43/camera_ar_marker/stderr.log
  File "/home/messi/camera_ar_marker/install/camera_ar_marker/lib/python3.10/site-packages/camera_ar_marker/rotate_robot.py", line 16
    self.id_subscription = self.create_subscription(String, 'ar_marker_id', self.id_callback, 10))
                                                                                                 ^
SyntaxError: unmatched ')'

